--- a/historia.html
+++ b/historia.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <body>
@@ -50,29 +51,43 @@
 
 </header>
 
-<main>
+<main class="fondo">
+  <section>
+    <h1 class="text-center">Historia</h1>
+  </section>
 
-<h1>HISTORIA</h1>
+
+<div class="container">
+
+
 
 <p>Grand Theft Auto V (abreviado como GTA V o GTA 5) es un videojuego de acción-aventura de mundo abierto desarrollado por el estudio Rockstar North y distribuido por Rockstar Games. Fue lanzado el 17 de septiembre de 2013 para las consolas PlayStation 3 y Xbox 360.​ Posteriormente, distribuido el 18 de noviembre de 2014 para las consolas de nueva generación PlayStation 4 y Xbox One y la vista en primera persona, luego para Microsoft Windows el 14 de abril de 2015 y finalmente se confirmó su lanzamiento para PlayStation 5, Xbox Series X y Xbox Series S para marzo de 2022 ​Entre las novedades se encuentra la mejora de gráficos (8k) incluido el soporte de 120 FPS. Se trató del primer gran título en la serie Grand Theft Auto desde el lanzamiento de Grand Theft Auto IV en 2008, el cual estrenó la «era HD» de la mencionada serie de videojuegos.​</p>
-
+</div>
 </main>
 
-<section></section>
+<section class="fondo">
 
-<div class="row">
-    <div class="col-4">
-        <video src="videobueno.mp4" controls></video>
-    </div>
-    <di class="col-8">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae fugit suscipit nesciunt cumque ea repellat iure ex, aut repudiandae veniam et obcaecati hic. Iure eveniet delectus enim explicabo ratione itaque.
-        </p>
+  <div class="container">
 
-    </section>
-    </di>
+    <div class="row">
+      <div class="col-7">
+          <video src="videobueno.mp4" controls class="w-800 img-fluid"></video> 
+      </div>
+      <div class="col-5">
+          <p>
+            La primera información fue revelada por Rockstar Games el 25 de octubre de 2011 en la red social Twitter.​ El juego está ambientado en la ciudad ficticia de Los Santos, así como en las zonas que la rodean, basada en la ciudad de Los Ángeles y el sur de California. La ciudad también era la ambientación del anterior juego GTA:San Andreas. Por primera vez el juego se centraría en tres personajes distintos en vez de uno solo: Michael, Trevor y Franklin, además del personaje que el jugador utiliza en el modo en línea. El tráiler de estreno de Grand Theft Auto V se dio a conocer el 2 de noviembre de 2011.
 
-</div>
+            Es el juego más caro de la historia, con un gasto de 265 millones de dólares, superando a su antecesor GTA IV —100 millones. Grand Theft Auto V recaudó 800 millones de dólares en las primeras 24 horas de su estreno, lo que lo convirtió en el videojuego que más dinero había recaudado en menos tiempo de toda la historia; y había recaudado en 3 días un monto récord de 1000 millones de dólares en ventas
+          </p>
+      </div>
+  </div>
+
+  </div>
+
+
+</section>
+
+
 
 
 </body>
